[metadata]
name = renuniq
summary = Renames files, giving them each unique names
version = 1
description = Renames files (such as images) in bulk while ensuring they each have a unique names, based either on the original name or by including an increasing numeric value.
long_description_file = 
	README.md
author = Dan Fandrich
author_email = dan@coneharvesters.com
home_page = https://github.com/dfandrich/renuniq
license = GPLv2+
license_file = COPYING
classifiers = 
	Programming Language :: Python
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Users
	Intended Audience :: End Users/Desktop
	Natural Language :: English
    Topic :: Utilities
	Typing :: Typed

[options]
py_modules = 
	renuniq
test_suite = renuniq_test
setup_requires = 
	flake8

[options.entry_points]
console_scripts = 
	renuniq = renuniq:main

[flake8]
max-line-length = 100
